[tool.poetry]
name = "time_series"
version = "0.1.0"
description = ""
authors = ["mauza <mauza@mauza.net>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
pandas = "^1.4.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
